# sensor_service

./: .env.sample  .gitignore  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 642632e6367c_initial_migration.py
core/: database.py  main.py  models.py  schemas.py  settings.py
core/tasks/: __init__.py  tasks.py
tests/: test_sensor_service.py  test_tasks.py
